<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.altice.calculadoradetiempos.MainActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ContinuarBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/esK"
        android:textColor="@color/txtShadow"
        android:textSize="130sp" />


    <Button
        android:id="@+id/ContinuarBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:onClick="runApp"
        android:text="@string/nextBtn"
        android:textColor="@android:color/background_light"
        android:textSize="14sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/WelcomeMsg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:weightSum="1">
        <RadioButton
            android:id="@+id/EspRadioBtn"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="19dp"
            android:checked="false"
            android:onClick="Spanish"
            android:text="@string/ES"
            android:textSize="19sp"
            android:textAlignment="center" />
        <RadioButton
            android:id="@+id/EnRadioBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="English"
            android:text="@string/En"
            android:textSize="19sp"
            android:textAlignment="center"
            android:layout_weight="0.16" />
    </RadioGroup>
    <TextView
        android:id="@+id/WelcomeMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/WelcomeMsg"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="Logo"
        android:cropToPadding="true"
        app:srcCompat="@drawable/logo"
        android:layout_above="@+id/WelcomeMsg"
        android:layout_marginBottom="11dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
