<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_app_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorBackgroundFloating"
        android:gravity="center_vertical"
        android:padding="0dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.altice.calculadoradetiempos.AppMainActivity">

        <TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Clock"/>
        <TextView
            android:id="@+id/TxtV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/timeSelectLabel"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />
        <!--Inicio-->
        <LinearLayout
            android:id="@+id/init"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TxtV">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="?attr/colorControlActivated"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/initDateLabelTxt"
                android:textColor="@android:color/background_light"
                android:textSize="15sp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/FechaInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/init">

            <TextView
                android:id="@+id/initLabel"
                android:layout_width="111dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/initDateLabelTxt" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/DateInitTextInput"
                android:layout_width="290dp"
                android:layout_height="match_parent"
                android:focusable="false"
                android:hint="@string/fechaInitHint"
                android:onClick="showDateDialog" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TimeInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/FechaInicio">

            <TextView
                android:id="@+id/finLabel"
                android:layout_width="111dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Hora" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/DateFinTextInput"
                android:layout_width="290dp"
                android:layout_height="match_parent"
                android:focusable="false"

                android:onClick="showTimeDialog" />

        </LinearLayout>
        <!--Inicio-->
        <!--FIN-->
        <LinearLayout
            android:id="@+id/fin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TimeInicio">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="?attr/colorControlActivated"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/FinDateLabelTxt"
                android:textColor="@android:color/background_light"
                android:textSize="15sp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/FechaFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/endLabel"
                android:layout_width="111dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/initDateLabelTxt" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/DateFinInputText"
                android:layout_width="290dp"
                android:layout_height="match_parent"
                android:focusable="false"
                android:hint="@string/fechaFinHint"
                android:onClick="showDateDialog" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TimeFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/FechaFin">

            <TextView
                android:id="@+id/EndfinLabel"
                android:layout_width="111dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Hora" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/EndDateFinTextInput"
                android:layout_width="290dp"
                android:layout_height="match_parent"
                android:focusable="false"

                android:onClick="showTimeDialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/TimeFin"
            android:id="@+id/linearLayout">

            <Button
                android:id="@+id/ContinuarBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
          android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimaryDark"

                android:text="@string/nextBtn"
                android:textColor="@android:color/background_light"
                android:textSize="14sp" />
        </LinearLayout>


    </RelativeLayout>
</ScrollView>